# MerkleTree

MerkleTree/MerkleTree_C++/: CMakeLists.txt  MTree.cpp  MTree.h  Node.cpp  Node.h  main.cpp
MerkleTree/MerkleTree_JAVA/src/: MerkleTrees.java  main.java
